--- a/BlazorCssIsolationConfiguration/BlazorCssIsolationConfiguration.csproj
+++ b/BlazorCssIsolationConfiguration/BlazorCssIsolationConfiguration.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Layout/*.razor.css" CssScope="scopeAnt" />
+  </ItemGroup>
+
 </Project>
